tests/compile-fail/lexer/random.stderr
error: Unexpected token
  ┌─ /home/nixon/git/skate/./tests/compile-fail/lexer/random.sk:1:1
  │
1 │ sss
  │ ^^^
  │
  = Expected: "fn"

